# fondito

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/app/: mod.rs
src/app/wallpaper_picker/: mod.rs  wallpaper_picker.slint
src/app/wallpaper_picker/picker/: card.slint  mod.rs  picker.slint
src/app/wallpaper_picker/services/: apply.rs  color.rs  mod.rs  scanner.rs  thumbnails.rs
src/ui/: adapters.rs  app.slint
