[package]
name = "fondito"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.16.1", default-features = false, features = [
  "std",
  "renderer-skia"
] }
spell-framework = "1.0.5"
log = "0.4"
env_logger = "0.11"
image = "0.25"
serde_json = "1"
fastrand = "2"

[build-dependencies]
slint-build = "1.16"
